# feature_se

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.bat.in  INSTALL.sh.in  LICENSE  README.md  UNINSTALL.bat.in  UNINSTALL.sh.in  all_build.bat  all_build.sh  build.bat  build.sh  jnihead.bat  jnihead.sh  make_cassdk_ndk_project.bat  make_gcc_project.sh  make_msvc_cassdk_project.bat  make_msvc_custom_project.bat  make_msvc_project.bat  make_mtfsdk_ndk_project.bat  make_ndk_project.bat  make_ndk_project.sh
cmake/: compiler_flag_overrides.cmake  config.cmake.in  custom_feature_compare.h.in
cmake/Modules/: FindCassdk.cmake  FindFse.cmake  utils.cmake
dependencies/: CMakeLists.txt  all_build_gflags_msvc.bat  all_build_glog_msvc.bat  build_gflags.sh  build_gflags_gcc.bat  build_gflags_msvc.bat  build_glog.sh  build_glog_gcc.bat  build_glog_msvc.bat
feature_se/: CMakeLists.txt  CodeManagerFactory.cpp  CodeManagerFactory.h  FeatureCompareSpeedTest.cpp  FeatureCompareVeracityTest.cpp  HashMapCl.cpp  HashMapCl.h  ICodeManager.cpp  ICodeManager.h  ICodeManagerCPU.cpp  ICodeManagerCPU.h  MD5SetImpl.h  MiniThreadPool.h  OverTableManager.cpp  OverTableManager.h  TopKCodeBean.cpp  TopKCodeBean.h  codemgr.h  config.h  cross_define.h  dot_product.h  feature_compare.h  feature_compare_cas.h  feature_data_types.h  feature_se.cpp  feature_se.h  hash_fun.h  hashmap_abstract.h  hashset_cl.h  hashtable_abstract.h  hashtable_core.h  topk_base.h
include/: cassdk_ndk_feacomp.h
jni/: BeanUtilits.cpp  BeanUtilits.h  CMakeLists.txt  JNIContext.h  jni_mgr.cpp  jni_mgr.h  net_gdface_sdk_fse_FseJniBridge.cpp  net_gdface_sdk_fse_FseJniBridge.h  net_gdface_sdk_fse_FseJniBridge_CodeBean.h
project.vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  feature_se.sln
project.vs2015/feature_se/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fctest.vcxproj  fctest.vcxproj.filters  fctest2.vcxproj  fctest2.vcxproj.filters  fse-config.cmake  fse_cas.vcxproj  fse_cas_static.vcxproj  fse_cas_static.vcxproj.filters  fse_cas_static_mt.vcxproj  fse_cas_static_mt.vcxproj.filters
project.vs2015/jni/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fse_cas_jni.vcxproj  fse_cas_jni.vcxproj.filters
test/: CMakeLists.txt  make_gcc_project.sh  make_msvc_cassdk_project.bat  make_msvc_project.bat  make_unix_makefile.sh  test.cpp  test_c.c  unix_makefile.sh
test/cmake/Modules/: FindCassdk.cmake  FindFse.cmake
